--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         work correctly both with client-side routing and a non-root public URL.
         Learn how to configure a non-root public URL by running `npm run build`.
       -->
-    <title>Amazing Concept Builders | Leaders in Quality Custom Homes</title>
+    <title>Amazing Master Builders | Leaders in Quality Custom Homes</title>
   </head>
 
   <body>
