font issues fixings

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,12 @@
       href="https://static.parastorage.com/client/pfavico.ico"
       type="image/x-icon"
     />
+
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css?family=Avenir:300,400&display=swap"
+      as="style"
+    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Avenir:300,400&display=swap"
